src/objects/PromoCodeProduct__c.object
<CustomObject>
    <description>Junction object between promo code and the affected product. Shows the relationship and differences from the normal product behaviour.</description>
    <fields>
        <fullName>Contract_Length_Duration__c</fullName>
        <description>Time period for the contract length. Used in combination with the field Contract Length.</description>
        <label>Contract Length Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>OneTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <description>Length value of the subscription by using this promo code in combination with the value set in the field Contract Length Duration (day, week, month etc)</description>
        <label>Contract Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Percentage of discount given on the attached product for this promo code</description>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Extra_Contract_Length_Duration__c</fullName>
        <description>Extended length value of the subscription as part of this promo code. Used in combination with the Extra Contract Length field.</description>
        <label>Extra Contract Length Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Contract_Length__c</fullName>
        <description>Extended length of the subscription as part of this promo code. Used in combination with the Extra Contract Length Duration field.</description>
        <label>Extra Contract Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Contrat_Length__c</fullName>
        <label>Extra Contrat Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>List (standard) price of the product.</description>
        <label>List Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product affected by this promo code.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promo Code Products</relationshipLabel>
        <relationshipName>Promo_Code_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Promo code related to this record.</description>
        <label>Promo Code</label>
        <referenceTo>PromoCode__c</referenceTo>
        <relationshipLabel>Promo Code Products</relationshipLabel>
        <relationshipName>Promo_Code_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StockKeepingUnit__c</fullName>
        <formula>Product__r.StockKeepingUnit</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <label>Promo Code Product</label>
    <nameField>
        <displayFormat>PCP-{000000000}</displayFormat>
        <label>PromoCode Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Code Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>